# Honestly-

./: .gitignore  BENCHMARKS.md  README.md  benchmark_real_data.py  benchmark_results.json  cross_domain_results.json  demo_v030.py  domain_adapters.py  finance.py  genomics.py  isomorphism_map.py  main (2).py  nlp_tagger.py  run (1).py  run_all_domains.py  smoother.py  smoother_v0.3.2.py  smoother_v0.3.3.py  suffix_smoother-0.1.0-py3-none-any.whl  suffix_smoother-0.1.1-py3-none-any.whl  suffix_smoother-0.2.0-py3-none-any.whl  suffix_smoother-0.3.0-py3-none-any.whl  system_report.json  test_all.py
error_correction/: suffix_smoothing.py
extracted_v030/suffix_smoother/: __init__.py  smoother.py
extracted_v030/suffix_smoother-0.3.0.dist-info/: METADATA  RECORD  top_level.txt
kaggle_dataset/: DOCUMENTATION.md  dataset-metadata.json
kaggle_dataset/source/suffix_smoother/: smoother.py
kaggle_kernel/: kernel-metadata.json  suffix_smoother_v040_demo.ipynb
suffix-smoother/: BENCHMARKS.md  README.md  pyproject.toml
suffix-smoother/examples/: domain_adaptation_nlp.py  empirical_study.py  log_anomaly.py  nlp_pos_tagging.py  v030_advanced_study.py  v030_budget_study.py  v030_comprehensive_audit.py  v030_grand_integration.py  v030_parallel_distributed.py  v030_research_report.py  v030_resilience_study.py
suffix-smoother/suffix_smoother/: __init__.py  smoother.py
suffix-smoother/tests/: test_adversarial_v030.py  test_v020_features.py  test_v030_features.py  test_v040_features.py
suffix_smoother_lib/: BENCHMARKS.md  README.md  pyproject.toml
suffix_smoother_lib/suffix_smoother/: __init__.py  smoother.py
