[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "suffix-smoother"
version = "0.2.1"
description = "Suffix smoothing classifier: three research-backed methods, conformal prediction, streaming."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
dependencies = ["numpy"]
keywords = [
    "nlp", "sequence-classification", "suffix-smoothing",
    "conformal-prediction", "uncertainty-quantification",
    "kneser-ney", "witten-bell", "log-anomaly", "genomics", "oov"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]

[project.urls]
"Source Code" = "https://github.com/loofy147/suffix-smoother"
"Bug Tracker" = "https://github.com/loofy147/suffix-smoother/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["suffix_smoother*"]
