[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "suffix_smoother"
version = "0.1.0"
description = "A lightweight, high-performance sequence classifier using recursive suffix smoothing."
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "numpy",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
